<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutYourDog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/question_1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0"
                        android:hint="Answer">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/answer_edit_Text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:maxLength="3"
                            android:padding="8dp"
                            android:textAlignment="center" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/question_2" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_2_answer_a_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_2_option_a" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_2_answer_b_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_2_option_b" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_2_answer_c_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_2_option_c" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/question_3" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_3_answer_a_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_3_option_a" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_3_answer_b_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_3_option_b" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question4" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/question_4" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_4_answer_a_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_4_option_a" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_4_answer_b_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_4_option_b" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/question_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/question_5_answer_a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_5_option_a" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/question_5_answer_b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_5_option_b" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/question_5_answer_c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_5_option_c" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/question_5_answer_d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_5_option_d" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/question6" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/custom_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/question_6" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_6_answer_a_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_6_option_a" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/question_6_answer_b_radio"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:onClick="questionRadioCheck"
                            android:text="@string/question_6_option_b" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorDivider" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="0"
        android:onClick="submitAnswer"
        android:text="@string/submit_button" />

</LinearLayout>

